# option-research

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
config/examples/: local.toml  test.toml
docs/: live_style_baseline.md  live_style_wheel_policy.md  manual_contract_verification.md  scanner_style_put_strategy.md  wheel_strategy.md
notebooks/: complete_short_put_workflow.ipynb
scripts/: build_backfill_manifest.py  compare_wheel_reports.py  run_backfill.py  run_batch_validation.py  run_compact_wheel_backfill.py  run_live_style_diagnostics_from_db.py  run_live_style_explainability_from_db.py  run_live_style_parameter_sweep_from_db.py  run_live_style_wheel_from_db.py  run_loser_autopsy.py  run_one_week_pipeline.py  run_portfolio_validation.py  run_scanner_compact_backfill.py  run_scanner_portfolio_from_db.py  run_scanner_wheel_portfolio_from_db.py  run_scanner_wheel_sweep_from_db.py  run_single_trade_pipeline.py  run_wheel_validation.py
src/options_quant/: __init__.py
tests/: test_package.py
tests/analytics/: test_performance_metrics.py
tests/backtest/: test_event_driven_engine.py
tests/pipelines/: test_batch_validation_pipeline.py  test_loser_autopsy_pipeline.py  test_one_week_pipeline.py  test_portfolio_validation_pipeline.py  test_single_trade_pipeline.py  test_wheel_validation_pipeline.py
tests/reporting/: test_reports.py  test_wheel_summary.py
tests/strategies/: test_contract_selection.py  test_scanner_put_strategy.py  test_short_put_strategy.py  test_strategy_framework.py  test_wheel_strategy.py
(+47 files in other folders)
